<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    
            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:background="@android:color/holo_blue_bright"
                android:gravity="center"
                android:text="@string/studymth"
                android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/studymth1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="235dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/studymth2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_mth_nxt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/next"
        android:background="@android:drawable/btn_default" />
            
            
</LinearLayout>
</ScrollView>