<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    android:orientation="vertical" >
    
 <TextView
        android:id="@+id/TVmock1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/textview"
        android:gravity="center"
        android:text="@string/exam"
        android:textColor="@android:color/holo_orange_dark"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="normal" />
    
  <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@android:color/transparent"
	    android:orientation="vertical" >

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

			<TextView
			    android:id="@+id/tv_timer_hr"
			    android:paddingLeft="220dp"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="00"
			    android:textColor="#FFFFFFFF"
			    android:textAppearance="?android:attr/textAppearanceLarge" />

			<TextView
			    android:id="@+id/tv_timer_min"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="00"
			    android:textColor="#FFFFFFFF"
			    android:textAppearance="?android:attr/textAppearanceLarge" />

			<TextView
			    android:id="@+id/tv_timer_sec"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingLeft="00dp"
			    android:text="00"
			    android:textColor="#FFFFFFFF"
			    android:textAppearance="?android:attr/textAppearanceLarge" />

		</LinearLayout>

		<TextView
		    android:id="@+id/tvmock1"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/queno"
		    android:background="@drawable/examque"
		    android:textColor="#FFFFFFFF"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
		    android:id="@+id/tvmock2"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/que"
		    android:layout_marginTop="5dp"
		    android:background="@drawable/examque"
		    android:textColor="#FFFFFFFF"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

		<RadioGroup android:layout_width="fill_parent"
  			  android:layout_height="wrap_content"
  			  android:background="@drawable/examque"
  			  android:textColor="#FFFFFFFF"
  			  android:layout_marginTop="5dp"
   			 android:orientation="vertical">
		
		<RadioButton
		    android:id="@+id/rb_mock1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#FFFFFFFF"
		    android:text="@string/op1" />

		<RadioButton
		    android:id="@+id/rb_mock2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#FFFFFFFF"
		    android:text="@string/op2" />

		<RadioButton
		    android:id="@+id/rb_mock3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#FFFFFFFF"
		    android:text="@string/op3" />

		<RadioButton
		    android:id="@+id/rb_mock4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#FFFFFFFF"
		    android:text="@string/op4" />
	</RadioGroup>
		<Button
		    android:id="@+id/btn_moxk_exam1"
		    android:layout_width="250dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginTop="15dp"
		    android:textColor="@android:color/holo_orange_dark"
		    android:height="@android:dimen/notification_large_icon_height"
		    android:background="@drawable/examclick"
		    android:text="START" />
		
		<Button
		    android:id="@+id/btn_moxk_exam2"
		    android:layout_width="250dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginTop="10dp"
		    android:textColor="@android:color/holo_orange_dark"
		    android:height="@android:dimen/notification_large_icon_height"
		    android:background="@drawable/bbkg"
		    android:text="End Exam" />
	    
	    </LinearLayout>
	</ScrollView>
    
</LinearLayout>
