<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/logintv1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/textview"
        android:gravity="center"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_orange_dark"
        
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="90dp" >

        <TableRow>

            <TextView
                android:id="@+id/tv_login_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/username"
               
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="Enter Username"
                android:ems="10"
                android:textColor="@android:color/holo_orange_dark"
                android:background="@drawable/logintext"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_login_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:textColor="@android:color/holo_orange_dark"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter Password"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textColor="@android:color/holo_orange_dark"
                android:background="@drawable/logintext"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>
        <Button
            android:id="@+id/btn_login_signin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="20dp"
             android:background="@drawable/bbkg"
            android:textColor="#FF000000"
             android:textSize="20sp"
            android:text="@string/signin" />

        </TableRow>
    </TableLayout>

</LinearLayout>
